♻️ (member): Refactor member handling to use username instead of Keycloak ID
- Replaced Keycloak ID with username as the primary member identifier across services and repositories.
- Updated `BootstrapService` to check for member existence via username.
- Simplified member creation logic with `createIfNotExisting` method.
- Modified `KeycloakAdminService` to delete users by username instead of ID.
- Adjusted `OrganizationContext` to resolve members using usernames.
- Updated tests (`MemberResourceTest`, `MemberKeycloakSyncServiceTest`) to reflect changes in member identifiers.